[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://gui/settings/LanguageEntry.gd" type="Script" id=2]

[node name="LanguageEntry" type="PanelContainer"]
margin_right = 320.0
margin_bottom = 38.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 313.0
margin_bottom = 31.0

[node name="FlagTexture" type="TextureRect" parent="VBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="LanguageLabel" type="Label" parent="VBoxContainer"]
margin_left = 28.0
margin_right = 306.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "settings_language_english"
valign = 1
autowrap = true
[connection signal="visibility_changed" from="." to="." method="_on_LanguageEntry_visibility_changed"]
